# teste_carga

./: .gitignore  LICENSE  README.md  bench_apistar.py  bench_apistar_async.py  bench_async.py  bench_blacksheep.py  bench_flask.py  bench_japronto.py  bench_uvicorn.py  bench_vibora.py  docker-compose.yaml  flasgger_async.py  test.sql
Dapper_PostgreSQL/: Dapper_PostgreSQL.sln
Dapper_PostgreSQL/APIIndicadores/: APIIndicadores.csproj  Company.cs  CompanyDAO.cs  Indicador.cs  IndicadoresDAO.cs  Program.cs  Startup.cs  appsettings.json
bench_f#/: README.md  main.fs
bench_f#/bench_c#/: Program.cs  Startup.cs  WeatherForecast.cs  appsettings.json  bench_c#.csproj
bench_f#/bench_c#/Models/: SalaryModel.cs
bench_f#/bench_f#/: Program.fs  Startup.fs  WeatherForecast.fs  bench_f#.fsproj
bench_fastapi/: README.md  docker-compose.yaml  requirements.txt
bench_fastapi/authentication/: __init__.py  __main__.py  config.py
bench_fastapi/devops/: Dockerfile  postgres.dockerfile
bench_go/: README.md
bench_java/: build.gradle
bench_nim/: example  example.nim  example.nimble  example2  example2.nim  example3  example3.nim  example_tmp.nim  super  super.nim
conderp-rust-backend/: .env  Cargo.toml  README.md  docker-compose.yaml
conderp-rust-backend/devops/: Dockerfile
conderp-rust-backend/migrations/2019-07-02-174130_create_companies/: down.sql  up.sql
conderp-rust-backend/src/: db.rs  main.rs  models.rs
conderp-rust-backend/src/controllers/: hello.rs  loadtest.rs  mod.rs
conderp-rust-backend/src/interfaces/: db.rs
crystal_bench/: README.md
devops/: mysql.dockerfile  postgres.dockerfile  redis.dockerfile
devops/sql-scripts/: dump-mysql.sql  dump-postgres.sql
es4x_bench/: index.js  package-lock.json  package.json
nim_bench/: example  example.nim  example.nimble  example_tmp.nim  super.nim
rust_bench/: README.md
rust_bench/bench_actix/: .env  Cargo.toml  README.md
rust_bench/bench_actix/src/: main.rs
rust_bench/bench_actix/src/controllers/: load.rs
rust_bench/bench_thruster/: .env  Cargo.toml  docker-compose.yml
rust_bench/bench_thruster/src/: main.rs
test_performance/: README.md  flask_test.py  requirements.txt  sanic_test.py  star_test.py  uwsgi.ini
test_performance/djteste/: manage.py
test_performance/djtesterest/: manage.py
test_performance/load_server/: __main__.py  wsgi.py  wsgi2.py  wsgi_async.py  wsgi_puro.py
test_performance/load_server1/: __init__.py  __main__.py
test_performance/load_server3/: __init__.py  __main__.py
test_performance/load_server3b/: __main__.py
test_performance/load_server3zum/: __init__.py
test_performance/startest/: __init__.py
test_performance/superfast/: __init__.py  __main__.py
v_bench/: .main.c  .v_bench.c  README.md  _company.v  index.html  main  main.tmp.c  main.v  main2  xxx.v
(+42 files in other folders)
