[package]
name = "conderp-rust-backend"
version = "0.1.0"
authors = ["Gustavo Freitas <gustavo@gmf-tech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.3"
futures = "0.1.28"
env_logger = "0.6.2"
serde = "1.0.94"
serde_json = "1.0.40"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4.2"

[[bin]]
name = "conderp"
path = "src/main.rs"