[package]
name = "bench_actix"
version = "0.1.0"
authors = ["gustavo <gustavo@gmf-tech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
dotenv = "0.14.1"
r2d2 = "0.8.5"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive ="1.0.99"
tokio-postgres="0.3.0"
postgres="0.15.2"
futures="0.1.28"

[[bin]]
name = "bench_actix"
path = "src/main.rs"