[package]
name = "bench_thruster"
version = "0.1.0"
authors = ["gustavo <gustavo@gmf-tech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.14.1"
futures ="0.1.28"
lazy_static = "1.3.0"
r2d2 = "0.8.5"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive ="1.0.99"
thruster = "0.7.11"
time = "0.1.42"
tokio = "0.1.22"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
env_logger = { version = "0.6.2", default-features = false }
uuid = { version = "0.7.4", features = ["serde", "v4"] }

[[bin]]
name = "bench_thruster"
path = "src/main.rs"